get_installations_load_last route alpha
